2016-04-07         Arnold D. Robbins     <arnold@skeeve.com>

	* awk.h (two_way_close_type): Move here from io.c.
	(close_rp): Add declaration.
	* builtin.c (do_printf): Call close_rp before fatal message when
	attempting to write the closed write end of a two way pipe.
	(do_print): Ditto.
	(do_print_rec): Ditto.
	* io.c (do_getline_redir): Same, for reading closed read end.
	(close_rp): Make not static.

2016-04-07  Eli Zaretskii  <eliz@gnu.org>

	* nonposix.h (WEXITSTATUS, WIFEXITED, WIFSIGNALED, WTERMSIG)
	(WIFSTOPPED, WSTOPSIG) [__MINGW32__]: New macros to replace the
	missing header sys/wait.h.
	(w32_status_to_termsig): Add prototype.

	* builtin.c (do_system) [__MINGW32__]: Compute the exit status of
	'system' differently under --traditional, as the low 8 bits are
	the most interesting.

2016-04-04         Arnold D. Robbins     <arnold@skeeve.com>

	* builtin.c (do_fflush): Add warning for flush to two-way
	pipe where write end was closed.
	* io.c (flush_io): Add some braces for the for loop.

2016-04-02         Arnold D. Robbins     <arnold@skeeve.com>

	* builtin.c (do_printf): If the redirection is two way but the
	fp is NULL, it means we're writing to the closed write-end of
	a two-way pipe. Issue a fatal error message.
	(do_print): Ditto.
	(do_print_rec): Ditto.
	* io.c (do_getline_redir): Same thing for reading from a closed
	read end of a two-way pipe. Fatal error.
	* NEWS: Updated.

2016-03-14         Arnold D. Robbins     <arnold@skeeve.com>

	* io.c (socketopen): For SOCK_DGRAM, set read_len to sizeof
	remote_addr. Makes UDP more or less work again. 
	Thanks to Juergen Kahrs for the fix.

2016-03-10         Arnold D. Robbins     <arnold@skeeve.com>

	* builtin.c (do_system): Further improvements. Catch core dump
	flag.

2016-03-11         Arnold D. Robbins     <arnold@skeeve.com>

	* builtin.c (do_system): Improve return values of system().

2016-03-08         Arnold D. Robbins     <arnold@skeeve.com>
