@@ -1,3 +1,7 @@
+2016-04-10         John E. Malmberg      <wb8tyw@qsl.net>
+
+	* generate_config_vms_h_gawk.com: define __attribute() as macro.
+
 2016-02-02         John E. Malmberg      <wb8tyw@qsl.net>
 
 	* descrip.mms: Add gawk_debug target.
