@@ -1,3 +1,7 @@
+2016-04-10         John E. Malmberg      <wb8tyw@qsl.net>
+
+	* regex_internal.c: Use _GL_ATTRIBUTE_PURE macro
+
 2016-04-07         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* awk.h (two_way_close_type): Move here from io.c.
@@ -40,7 +44,7 @@
 2016-03-14         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* io.c (socketopen): For SOCK_DGRAM, set read_len to sizeof
-	remote_addr. Makes UDP more or less work again. 
+	remote_addr. Makes UDP more or less work again.
 	Thanks to Juergen Kahrs for the fix.
 
 2016-03-10         Arnold D. Robbins     <arnold@skeeve.com>
